# denmpc

./: .project  CMakeLists.txt  CMakeLists.txt~  README.md  Readme.md  commit.sh  package.xml  readme.md
config/: ardrone_front.yaml  ardrone_front_params.yaml  scenario_params.yaml
doc/: mainpage.dox  rosdoc.yaml  wiki
launch/: ardrone_denmpc.launch  gazebo.launch  liftoff.launch  scenario_params.launch  test.launch
src/: Agent.cpp  Agent.h  Constraint.cpp  Constraint.h  Coupling.cpp  Coupling.h  Event.cpp  Event.h  Indexing.h  MathLib.cpp  MathLib.h  Scheduler.cpp  Scheduler.h
src/controller/: Cmscgmres.cpp  Cmscgmres.h  Controller.cpp  Controller.h
src/user_generated/: Ardrone_20170227.cpp  Ardrone_20170227.h  CollisionAvoidanceCoupling_20170227.cpp  CollisionAvoidanceCoupling_20170227.h  OrientationConstraint_20170227.cpp  OrientationConstraint_20170227.h  Turtle.cpp  Turtle.h  simplePosePublisher.py
src/user_scenarios/: ardrone_pose_tracking.cpp  ardrone_sensor_tracking.cpp  scenario.cpp  scenario.cpp~  scenario_param.cpp
