<?xml version="1.0"?>
<package>
  <name>denmpc</name>
  <version>1.0.0</version>
  <description>A real-time nonlinear model predictive control package for single and multi-agent systems</description>

  <author>Jan Dentler</author>
  <maintainer email="jan.dentler@uni.lux">Jan DENTLER</maintainer>
  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/wiki/dentopt_nmpc_controller</url>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  

<export>
  <rosdoc config="rosdoc.yaml" />
</export>
</package>
